Fixing button layout issue

--- a/app/assets/stylesheets/overrides.sass
+++ b/app/assets/stylesheets/overrides.sass
@@ -100,6 +100,8 @@ p.stats
     dd
       margin-left: auto
 
+.layout-actions
+  width: 100%
 
 #placesmap, #cropmap
   height: 500px
